and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------*

03-11-2014 MK, tag emdna-V10-00-50
- correct track creation by G4MoleculeGunMessenger

03-11-2014 MK, tag emdna-V10-00-49
- Remove useless classes
- Correct a bug in G4MoleculeGun

28-10-2014  PA, tag emdna-V10-00-48
- correct compilation warnings

28-10-2014  PA, tag emdna-V10-00-47
- correct compilation warnings

28-10-2014  PA, tag emdna-V10-00-46
- correction in sources.cmake

28-10-2014  PA, tag emdna-V10-00-45
- retag to add LEPTS

28-10-2014  PA, tag emdna-V10-00-44
- add LEPTS

25-10-2014  MK, tag emdna-V10-00-43
- remove useless G4VITScheduler

25-10-2014  MK, tag emdna-V10-00-42
- correct warnings

24-10-2014  MK, tag emdna-V10-00-41
- G4ITTimeStepper-->G4VScheduler
- G4ITStepManager-->G4ITScheduler
- G4ITStepManager-->G4ITSchedulerMessenger
- G4AllITManager & G4ITManager deleted
- G4ITFinder added
- G4VITTrackHolder added
- G4ITTrackHolder implemented
- code cleaned + useless classes removed

24-10-2014  MK, tag emdna-V10-00-40
- G4ITStepManager: remove verbose at closure time

21-10-2014  MK, tag emdna-V10-00-39
- try to solve crash at closure time

21-10-2014  MK, tag emdna-V10-00-38
- remove G4MolecularConfiguration from the manager's
  table when deleted
- update disclaimer

17-10-2014  MK, tag emdna-V10-00-37
- clean code
- G4ITStepManager: one can ask why simulation stops
- remove useless verbose

17-10-2014  MK, tag emdna-V10-00-36
- Call G4ITTimeStepper in ChemMan::InitMaster
- Remove inappropriate method in G4ITTrackHolder
- G4DNASecondOrderReaction uses G4ITTimeStepper::GetTimeStep

10-10-2014  MK, tag emdna-V10-00-35
      Avoid use of std::map at the application level in TimeStepAction
